--- a/GoalTrackerApp/appsettings.Development.json
+++ b/GoalTrackerApp/appsettings.Development.json
@@ -1,8 +1,39 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=GoalTrackerApiDB;User=Vasilis;Password={DB_PASS};MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:dd-MM-yyyy HH:mm:ss} {Level:u3}] {Message:lj} {NewLine} {Exception}",
+          "retainedFileCountLimit": 31,
+          "fileSizeLimitBytes": null
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithAspnetCore"
+    ]
   }
 }
