--- a/GoalTrackerApp/appsettings.json
+++ b/GoalTrackerApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=;User=;Password=;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
