chore(config): enhance database configuration with environment variable validation

--- a/GoalTrackerApp/appsettings.Development.json
+++ b/GoalTrackerApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=GoalTrackerApiDB;User=Vasilis;Password={DB_PASS};MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};User={DB_USER};Password={DB_PASS};MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,7 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "localhost",
+  "Authentication": {
+    "SecretKey": "{SECRET_KEY}"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
