chore(project): update project dependencies and launch settings

--- a/GoalTrackerApp/GoalTrackerApp.csproj
+++ b/GoalTrackerApp/GoalTrackerApp.csproj
@@ -4,7 +4,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-      <UserSecretsId>2dd4d980-88eb-47b5-a3e6-124f08a6e6d6</UserSecretsId>
+        <UserSecretsId>2dd4d980-88eb-47b5-a3e6-124f08a6e6d6</UserSecretsId>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
     <ItemGroup>
