chore(config): update development appsettings with email, reset, captcha and app URLs

--- a/GoalTrackerApp/appsettings.Development.json
+++ b/GoalTrackerApp/appsettings.Development.json
@@ -9,6 +9,31 @@
     }
   },
   "AllowedHosts": "localhost",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "{EMAIL_SENDER}",
+    "SenderName": "{EMAIL_SENDER_NAME}",
+    "Username": "{EMAIL_USERNAME}",
+    "Password": "{EMAIL_PASSWORD}"
+  },
+  "PasswordReset": {
+    "TokenExpirationHours": 1,
+    "MaxAttemptsPerTimeWindow": 3,
+    "TimeWindowMinutes": 15,
+    "FrontendResetUrl": "{FRONTEND_RESET_URL}"
+  },
+  "CaptchaSettings": {
+    "Enabled": true,
+    "SecretKey": "{CAPTCHA_SECRET_KEY}",
+    "SiteKey": "{CAPTCHA_SITE_KEY}"
+  },
+  "AppSettings": {
+    "LogoUrl": "https://res.cloudinary.com/datv9nvg4/image/upload/v1764890625/favicon_1_zerdbr.png?v=2",
+    "AppUrl": "http://localhost:5173",
+    "SupportUrl": "http://localhost:5173/support",
+    "LoginUrl": "http://localhost:5173/login"
+  },
   "Authentication": {
     "SecretKey": "{SECRET_KEY}"
   },
